tests/derive_compile_fail/non_gc_safe.rs
#[macro_use]
extern crate shredder;

struct NotGcSafe {}

#[derive(Scan)]
struct Test0 {
    #[shredder(skip)]
    field: NotGcSafe
}

fn main() {}
